tests/fixtures/invalid/e010/syntax_error.spec
behavior validate_input "Validate Input" {
  contract """The system validates user input."""
  invariants [BEH-SF-010]
}
